--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
-#database
-spring.datasource.url= jdbc:mysql://localhost:3306/miao
-spring.datasource.username=root
-spring.datasource.password=root
+spring.profiles.active=@profileActive@
+
+#dced600949
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 # Keep the connection alive if idle for a long time (needed in production)
 #spring.datasource.testWhileIdle = true
@@ -17,10 +16,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy 
 
 # RDBMS 方言, 这里选用MySQL5Dialect
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 spring.thymeleaf.mode=LEGACYHTML5
-
-
-#hibernate dev
-
